--- a/LABIII/hoyviernes/.vscode/launch.json
+++ b/LABIII/hoyviernes/.vscode/launch.json
@@ -5,8 +5,8 @@
              "type": "node",            
              "request": "launch",            
              "name": "Launch Program",
-             "program":"${workspaceRoot}/ejerc6.js",   
-	"cwd": "${workspaceRoot}"        
+             "program":"${workspaceRoot}/auto.ts",   
+	        "cwd": "${workspaceRoot}"        
      
        
          },        
